--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 <body>
-<h1 class="h1">Our menu</h1>
+<h1>Our menu</h1>
 <div class="row">
 	<div class="container col-lg-4 col-md-6 col-sm-12">
 		<section>
